# TDK

./: calculator.js  calculator.py  importBackEnd.js  index.html  script.js  style.css  test.py
.cursorrules/: A  B  D  E
backend/: ai.py  calculator.py
backend/.cursorrules/: A
backend_python/: ai.py  calculator.py  server.py
backend_rust/: Cargo.toml
backend_rust/src/: ai.rs  calculator.rs  main.rs
frontend/: index.html  script.js  style.css
