[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.10"
walkdir = "2.4"
tokio = { version = "1", features = ["full"] }